--- a/html/discografia.html
+++ b/html/discografia.html
@@ -43,7 +43,7 @@
         <h1>Discografía</h1>
 
         <section class="row mx-4">
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo"> MIRROR </p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/5q0KXQ9zQWjFvYB3Mtvbcv?utm_source=generator&theme=0"
@@ -52,7 +52,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo"> Kiss from the darkness </p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/5qAQHDiAP3p84S1l22G1K7?utm_source=generator&theme=0"
@@ -61,7 +61,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">HONEY</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/62wG7uQI1PNRJ47n5JQf1n?utm_source=generator&theme=0"
@@ -70,7 +70,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">YELLOW</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/3jUQLngJWwEUStBeriSbe0?utm_source=generator&theme=0"
@@ -79,7 +79,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">HELLO WORLD</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/427uth9E7qpwKPaGZ5iLx2?utm_source=generator&theme=0"
@@ -88,7 +88,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">STANDARD</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/00KuDDUhbK1eJgjoAIbbg8?utm_source=generator&theme=0"
@@ -97,7 +97,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">Queens are trumps -切り札はクイーン-</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/4biujDeF4tKF2rX6pG7oQs?utm_source=generator&theme=0"
@@ -106,7 +106,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">BABY ACTION</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/4q6ka5GVi5yPCUKV06HqXP?utm_source=generator&theme=0"
@@ -115,7 +115,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">TEMPTATION BOX</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/02Mw5RJbogEiPXoPIj4LVt?utm_source=generator&theme=0"
@@ -124,7 +124,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                 <p class="titulo">BEST★SCANDAL</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/1pBIHdlkGurT9kkPNNIi07?utm_source=generator&theme=0"
