--- a/html/integrantes.html
+++ b/html/integrantes.html
@@ -44,7 +44,7 @@
         <h1>Integrantes de Scandal</h1>
 
         <section class="row mx-4">
-            <div class="col-xl-3 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-3">
                 <p class="titulo"> HARUNA </p>
                 <img class="fotoIntegrantes" src="../img/HP_HARUNA.jpg" alt="Foto Haru">
 
@@ -58,7 +58,7 @@
 
             </div>
 
-            <div class="col-xl-3 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-3">
                 <p class="titulo"> MAMI </p>
                 <img class="fotoIntegrantes" src="../img/HP_MAMI.jpg" alt="Foto Mami">
 
@@ -72,7 +72,7 @@
 
             </div>
 
-            <div class="col-xl-3 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-3">
                 <p class="titulo"> TOMOMI </p>
                 <img class="fotoIntegrantes" src="../img/HP_TOMOMI.jpg" alt="Foto Tomo">
 
@@ -86,7 +86,7 @@
 
             </div>
 
-            <div class="col-xl-3 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-3">
                 <p class="titulo"> RINA </p>
                 <img class="fotoIntegrantes" src="../img/HP_RINA.jpg" alt="Foto Rina">
 
