--- a/html/videos.html
+++ b/html/videos.html
@@ -43,7 +43,7 @@
         <h1>Videos</h1>
 
         <section class="row mx-4">
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> ハイライトの中で僕らずっと </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> Line of sight </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> MIRROR </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -76,7 +76,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> 愛にならなかったのさ </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -87,7 +87,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> one more time </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -98,7 +98,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> アイボリー </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -109,7 +109,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> eternal </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -120,7 +120,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> Living in the city </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -131,7 +131,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> 月 </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -142,7 +142,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> Tonight </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -153,7 +153,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> A.M.D.K.J. </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -164,7 +164,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> 最終兵器、君 </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -175,7 +175,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> Fuzzy </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -186,7 +186,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> まばたき </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
@@ -197,7 +197,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4 col-md-6 col-sm-12">
+            <div class="col-sm-12 col-md-6 col-xl-4">
                 <p class="titulo"> マスターピース </p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315"
