--- a/index.html
+++ b/index.html
@@ -75,33 +75,50 @@
             <img class="fotoVivo" src="img/foto-3.jpg" alt="Foto Vivo 3">
         </div>
 
-        <section class="mx-4">
-            <h2>Historia de la banda</h2>
+        <section class="mx-4 mt-4 row">
+            <article class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+                <h2>Historia de la banda</h2>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora ullam totam possimus labore accusantium
-                fugiat corrupti natus non magnam, vitae incidunt obcaecati maiores dolores quia, minus qui aperiam?
-                Sapiente, voluptatibus nostrum, reiciendis ullam voluptatem deserunt vero, iure eveniet numquam ad
-                dolore voluptas obcaecati! Commodi officia accusantium dolore, officiis consequuntur quis ratione
-                laborum impedit, consectetur aliquam repudiandae nam assumenda fugit possimus suscipit fuga voluptatibus
-                vero dolorum harum molestias architecto in illo. Pariatur aliquid culpa asperiores soluta, nesciunt
-                maiores suscipit veritatis hic assumenda quis reprehenderit ex alias quo debitis adipisci illo sapiente
-                repellat numquam ab ipsam beatae error recusandae modi maxime? Non itaque quos eos vitae nam, impedit
-                alias dolorum laudantium dolorem. Consequuntur minima, possimus repellat ducimus praesentium doloremque
-                iusto hic, sint animi veniam tenetur explicabo magni at ex. Non a autem veritatis pariatur. Libero, sunt
-                soluta? Deleniti facilis minima laborum similique facere maiores obcaecati adipisci iusto amet saepe
-                doloremque molestiae delectus possimus corporis sed, exercitationem accusamus a? Ex error repudiandae ea
-                est minus, debitis praesentium nemo illo, minima voluptatibus dolor corporis cumque vel! Qui, quam rem
-                eligendi possimus, praesentium iusto consectetur enim magnam dolorum expedita nostrum unde facilis
-                fugiat officia est provident assumenda quidem. Voluptatibus, itaque nobis? Assumenda placeat culpa
-                asperiores recusandae iusto doloribus fugiat adipisci ipsa, ipsum vero non? Ex rerum exercitationem
-                adipisci deserunt, sint sapiente magni rem sed perspiciatis, earum hic. In eligendi suscipit
-                reprehenderit nemo harum sit ipsum incidunt vel temporibus, tempore magni enim facilis cum corporis
-                iure, eius sed laboriosam architecto sunt. Quas nostrum quidem consectetur fugiat doloribus molestiae,
-                corporis eum dignissimos tempore nobis exercitationem fugit nemo, laboriosam impedit asperiores in odit
-                magnam nihil minima voluptatibus. Quibusdam tempore optio similique labore laboriosam omnis placeat.
-                Aliquid id doloremque molestias aspernatur similique maiores! Amet modi assumenda corrupti unde eum
-                molestias accusantium non, laboriosam rerum neque nisi asperiores nulla blanditiis.
-            </p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora ullam totam
+                    possimus labore
+                    accusantium
+                    fugiat corrupti natus non magnam, vitae incidunt obcaecati maiores dolores quia, minus qui aperiam?
+                    Sapiente, voluptatibus nostrum, reiciendis ullam voluptatem deserunt vero, iure eveniet numquam ad
+                    dolore voluptas obcaecati! Commodi officia accusantium dolore, officiis consequuntur quis ratione
+                    laborum impedit, consectetur aliquam repudiandae nam assumenda fugit possimus suscipit fuga
+                    voluptatibus
+                    vero dolorum harum molestias architecto in illo. Pariatur aliquid culpa asperiores soluta, nesciunt
+                    maiores suscipit veritatis hic assumenda quis reprehenderit ex alias quo debitis adipisci illo
+                    sapiente
+                    repellat numquam ab ipsam beatae error recusandae modi maxime? Non itaque quos eos vitae nam,
+                    impedit
+                    alias dolorum laudantium dolorem. Consequuntur minima, possimus repellat ducimus praesentium
+                    doloremque
+                    iusto hic, sint animi veniam tenetur explicabo magni at ex. Non a autem veritatis pariatur. Libero,
+                    sunt
+                    soluta? Deleniti facilis minima laborum similique facere maiores obcaecati adipisci iusto amet saepe
+                    doloremque molestiae delectus possimus corporis sed, exercitationem accusamus a? Ex error
+                    repudiandae ea
+                    est minus, debitis praesentium nemo illo, minima voluptatibus dolor corporis cumque vel! Qui, quam
+                    rem
+                    eligendi possimus, praesentium iusto consectetur enim magnam dolorum expedita nostrum unde facilis
+                    fugiat officia est provident assumenda quidem. Voluptatibus, itaque nobis? Assumenda placeat culpa
+                    asperiores recusandae iusto doloribus fugiat adipisci ipsa, ipsum vero non? Ex rerum exercitationem
+                    adipisci deserunt, sint sapiente magni rem sed perspiciatis, earum hic. In eligendi suscipit
+                    reprehenderit nemo harum sit ipsum incidunt vel temporibus, tempore magni enim facilis cum corporis
+                    iure, eius sed laboriosam architecto sunt. Quas nostrum quidem consectetur fugiat doloribus
+                    molestiae,
+                    corporis eum dignissimos tempore nobis exercitationem fugit nemo, laboriosam impedit asperiores in
+                    odit
+                    magnam nihil minima voluptatibus. Quibusdam tempore optio similique labore laboriosam omnis placeat.
+                    Aliquid id doloremque molestias aspernatur similique maiores! Amet modi assumenda corrupti unde eum
+                    molestias accusantium non, laboriosam rerum neque nisi asperiores nulla blanditiis.
+                </p>
+            </article>
+
+            <aside class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 row align-items-center">
+                <img class="fotoSola col" src="img/foto-0.jpg" alt="Foto Vivo 0">
+            </aside>
 
         </section>
 
